# disco.oauth2

./: .readthedocs.yaml  LICENCE  README.md  setup.cfg
.github/workflows/: lint.yml
disco_oauth2/: __init__.py  appinfo.py  client.py  connection.py  errors.py  flags.py  guild.py  http.py  integration.py  member.py  token.py  user.py  utils.py
disco_oauth2/types/: connection.py  integration.py  member.py  snowflake.py  user.py
discord_oauth2/: __init__.py  appinfo.py  connection.py  errors.py  flags.py  guild.py  http.py  integration.py  utils.py
discord_oauth2/types/: __init__.py  appinfo.py  guild.py  member.py  snowflake.py  token.py
docs/: api.rst  conf.py  index.rst  modules.rst  requirements.txt
examples/: simple.py
