[metadata]
name = discord_oauth2
version = attr: discord_oauth2.__version__
description = An asynchronous discord OAuth2 API wrapper.
long_description = file: README.md
long_description_content_type = text/markdown
author = attr: discord_oauth2.__author__
author_email = attr: discord_oauth2.__author_email__
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages =
    discord_oauth2
    discord_oauth2.types
install_requires =
    aiohttp>=3.7.4,<4