[metadata]
name = disco.oauth2
version = attr: disco_oauth2.__version__
description = An asynchronous discord OAuth2 API wrapper.
long_description = file: README.md
long_description_content_type = text/markdown
author = martimartins
author_email = martim13artins13@gmail.com
license = MIT
license_file = LICENCE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Intended Audience :: Developers
    Natural Language :: English
    Topic :: Internet
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Typing :: Typed

[options]
packages =
    disco_oauth2
    disco_oauth2.types
install_requires =
    aiohttp>=3.7.4,<4